--- a/Report Demo ML Microplastic data.Rmd
+++ b/Report Demo ML Microplastic data.Rmd
@@ -842,7 +842,7 @@ writexl::write_xlsx(x = gc_hplc_list, path = "gc_hplc_list_df.xlsx")
 ```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
 # Trace metal data
 
-metal <- readxl::read_excel("C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Trace metal/Trace metal data.xlsx")
+metal <- readxl::read_excel("C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Trace metal/Trace metal data - Before removal of USE-01-rep1.xlsx")
 
 p <- "C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Table of product categorization_NewFileName.xlsx"
 
@@ -932,7 +932,7 @@ Log-Ratio Transformation: Transform the compositional data using an appropriate 
 # list_new <- list()
 
 # for (j in 1:length(gc_list)) {
-  df_pca <- gc_hplc_icp_list[[1]] %>% # [[j]] %>%
+  df_pca <- icp_list[[1]] %>% # [[j]] %>%
     dplyr::select(File,
                   Subcategory,
                   Feature,
@@ -950,10 +950,10 @@ Log-Ratio Transformation: Transform the compositional data using an appropriate 
     tibble::column_to_rownames(., var="File") %>%
     relocate(Subcategory, .after = 1)
   
-# For GC-ICP//HPLC_ICP//GC_HPLC_ICP
-selected_columns <- grep("ATDGCMS|HPLCTOFMS", colnames(df_pca), invert = TRUE) 
-selected_columns <- selected_columns[-c(1,2)]
-colnames(df_pca)[selected_columns] <- paste0("col_", seq_along(selected_columns))
+# For GC-ICP//HPLC_ICP//GC_HPLC_ICP for ANOVA
+# selected_columns <- grep("ATDGCMS|HPLCTOFMS", colnames(df_pca), invert = TRUE) 
+# selected_columns <- selected_columns[-c(1,2)]
+# colnames(df_pca)[selected_columns] <- paste0("col_", seq_along(selected_columns))
   
   # APPLY for ALL data combinations: IF conditioning, which feature column appear consistently (populate 90 % of that one product type`), KEEP IT!!!!!
   col_id <- c()
@@ -1242,21 +1242,17 @@ for (df in list(test2_gc, test2_hplc, test2_gchplc, test2_gcicp, test2_hplcicp, 
 # for (i in 1:length(df_percentage_list)) { 
   writexl::write_xlsx(df_percentage %>% # df_percentage_list[[i]]
                         mutate(Subcategory = test2$Subcategory) %>%
-                        mutate(technique = test2$technique) %>%
-                        relocate(Subcategory, technique, .before = 1),
-                      path = paste0("gc_icp_min",
+                        # mutate(technique = test2$technique) %>%
+                        relocate(Subcategory, 
+                                 # technique, 
+                                 .before = 1),
+                      path = paste0("gc_hplc-reduc",
                                     # "_iterative",
                                     ".xlsx"))
 # }
 
 # For ICP data byitself
 colnames(df_percentage) <- paste0("col_", 1:ncol(df_percentage))
-
-
-df_percentage <- df_percentage %>% # df_percentage_list[[i]]
-                        mutate(Subcategory = test2$Subcategory) %>%
-                        mutate(technique = test2$technique) %>%
-                        relocate(Subcategory, technique, .before = 1)
 ```
 
 ### ANOVA
@@ -1290,7 +1286,7 @@ Error: no more error handlers available (recursive errors?); invoking 'abort' re
 Df    Sum Sq   Mean Sq F value   Pr(>F)    
 Subcategory  18 1.404e-28 7.798e-30   2.745 0.000658 ***
 Residuals   109 3.097e-28 2.841e-30                     
----
+
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 - GC + ICP (with USE only) 
@@ -1298,7 +1294,7 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
             Df    Sum Sq   Mean Sq F value Pr(>F)  
 Subcategory 18 3.097e-30 1.721e-31   2.045  0.025 *
 Residuals   48 4.039e-30 8.415e-32                 
----
+
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 *-** WITH feature reduction - imputation with Zeros => NO SIGNIFICANT!
@@ -1327,7 +1323,7 @@ Error: no more error handlers available (recursive errors?); invoking 'abort' re
 Df    Sum Sq   Mean Sq F value   Pr(>F)    
 Subcategory  18 4.557e-28 2.532e-29   3.804 2.97e-06 ***
 Residuals   144 9.584e-28 6.656e-30                     
----
+
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 
@@ -1503,17 +1499,32 @@ ggplot(data = top_metal_plot_df, aes(x = Category, y = Values, fill = Feature)) 
        fill = "Top trace metals") +
   theme_minimal(base_size = 20) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
-```
 
-#### 2.1 Among the top trace metal, if the metal is shared among different samples, is there a significant difference in the concentration of these trace metals?
 
-```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
+df <- data.frame(technique = rep(c("GC", "HPLC", "ICP", "GC + HPLC", "GC + ICP", "HPLC + ICP", "GC + HPLC + ICP"), 6),
+                 classifier = c(rep("RF", 7), rep("XGB", 7), rep("LGBM", 7), rep("GBM", 7), rep("SVC", 7), rep("MLR", 7)),
+                 accuracy = c(85.7, 100, 75, 83.3, 56.3, 100, 90, NA, 83.3, NA, 75, 50, 91.6, 90, 14.3, 91.6, 8.3, 71.4, 6.25, NA, 90, 71.4, 100, NA, 70, 56.3, 100, 83.3, 14.3, 75, NA, 63.3, 43.8, 75, 66.6, 42.9, 50, NA, 60, 62.5, 66.6, 80))
+                   # c(85.7, NA, 14.3, 71.4, 14.3, 42.9, 
+                   #            100, 83.3, 91.6, 100, 75, 50,
+                   #            75, NA, 8.3, NA, NA, NA,
+                   #            83.3, 75, 71.4, 70, 63.3, 60,
+                   #            56.3, 50, 6.25, 56.3, 43.8, 62.5,
+                   #            100, 91.6, NA, 100, 75, 66.6,
+                   #            90, 90, 90, 83.3, 66.6, 80))
 
-```
+df$classifier <- factor(df$classifier, levels = c("MLR", "SVC", "LGBM", "XGB", "GBM", "RF"))
 
-#### 2.2 Among the top trace metal, what are the metal that uniquely occur in just 1 sample?
+ggplot(data = df) +
+  geom_bar(aes(x = classifier, y = accuracy, fill = technique), position = position_dodge(width = 0.9), stat = "identity") +
+  labs(title = "", x = "Machine Learning Classifiers", y = "Balanced Accuracy (%)",
+       fill = "Data combination") +
+  scale_fill_viridis_d() +
+  scale_x_discrete(labels = c("MLR", "SVC", "LGBM", "XGB", "GBM", "RF")) +
+  theme_classic(base_size = 30) +
+  theme(axis.text.x = element_text(angle = 90, color = "black", face = "bold"),
+        axis.ticks.length.x = unit(0, "cm")) +
+  scale_y_continuous(expand = c(0,0)) 
 
-```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
 ```
 
 #### For each plastic type, What are compounds that only appear in USSB and not USE?
@@ -1660,7 +1671,7 @@ writexl::write_xlsx(x=beyond_pmt, path = "Top10_HPLC_data_beyond_pmt_suspect Scr
 # clr_transformed_pca <- compositions::clr(test[, -1])
 data <- icp_subcat
 res.pca <- FactoMineR::PCA(
-  data[, 2:ncol(data)],
+  df_percentage,
   # impute_list[[4]][[1]],
   # test2[, -1],
   # clr_transformed_pca,
@@ -1677,16 +1688,16 @@ factoextra::fviz_pca_biplot(res.pca,
                             invisible = "var", 
                             repel = TRUE,
                             labelsize = 10, 
-                            habillage = factor(data$Subcategory),
-                            # addEllipses = TRUE,
-                            # ellipse.level=0.95,
-                            ggtheme = ggplot2::theme_minimal(base_size = 30),
+                            habillage = factor(df_pca$Subcategory),
+                            addEllipses = TRUE,
+                            ellipse.level=0.95,
+                            ggtheme = ggplot2::theme_minimal(base_size = 20),
                             title = "Plastic Sample"
                             ) + 
   # if has error "Too few points to calculate an ellipse"
-  ggforce::geom_mark_ellipse(aes(fill = Groups,
-                                 color = Groups),
-                             label.buffer = unit(40, 'mm')) +
+  # ggforce::geom_mark_ellipse(aes(fill = Groups,
+  #                                color = Groups),
+  #                            label.buffer = unit(40, 'mm')) +
   theme(legend.position = 'bottom') + coord_equal()
 ```
 
@@ -2067,8 +2078,8 @@ wilcox_subcategory <- function(dflist) {
         p_2 <- utils::combn(unique(tempdf_filtered$Subcategory), 2)[2,col]
         
         # calculating the p-value between each product category pair 
-        pval_wilcox_test <- wilcox.test(as.numeric(unlist(tempdf_filtered[which(tempdf_filtered$Subcategory == p_1), 2])), 
-                                        as.numeric(unlist(tempdf_filtered[which(tempdf_filtered$Subcategory == p_2), 2])))$p.value
+        pval_wilcox_test <- wilcox.test(as.numeric(unlist(tempdf_filtered[which(tempdf_filtered$Subcategory == p_1), c])), 
+                                        as.numeric(unlist(tempdf_filtered[which(tempdf_filtered$Subcategory == p_2), c])))$p.value
         # assigning row information
         df[nrow(df) + 1,] <- c(colnames(dat)[c], 
                                paste0(p_1, " & ", p_2), 
