--- a/Report Demo ML Microplastic data.Rmd
+++ b/Report Demo ML Microplastic data.Rmd
@@ -842,7 +842,7 @@ writexl::write_xlsx(x = gc_hplc_list, path = "gc_hplc_list_df.xlsx")
 ```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
 # Trace metal data
 
-metal <- readxl::read_excel("C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Trace metal/Trace metal data - Before removal of USE-01-rep1.xlsx")
+metal <- readxl::read_excel("C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Trace metal/Trace metal data.xlsx")
 
 p <- "C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Table of product categorization_NewFileName.xlsx"
 
@@ -1334,8 +1334,8 @@ summary(aov(as.formula(paste(paste(setdiff(names(df_percentage), "Subcategory"),
 ## Import Subcategory data for PCA/stats/ML
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
 # Import newly curated data \\  
-file_list <- list.files(path = paste0(getwd(), "/data/MLdata_Subcategory/new_afterdebug_16Mar2024"), full.names = TRUE)
-icp_subcat <- readxl::read_xlsx(path = paste0(getwd(), "/data/MLdata_Subcategory/new_afterdebug_16Mar2024/icp_df_all.xlsx"))
+file_list <- list.files(path = paste0(getwd(), "/MLdata_USEonly"), full.names = TRUE)
+icp_subcat <- readxl::read_xlsx(path = paste0(getwd(), "/MLdata_USEonly/icp.xlsx"))
 gc_subcat <- list()
 hplc_subcat <- list()
 gc_icp_subcat <- list()
@@ -1344,22 +1344,22 @@ hplc_icp_subcat <- list()
 gc_hplc_icp_subcat <- list()
 
 for (file in file_list) {
-  if (grepl("gchplcicp_", file)) {
+  if (grepl("gc_hplc_icp_", file)) {
 
     gc_hplc_icp_subcat[[file]] <- readxl::read_excel(file)
-  } else if (grepl("gchplc_", file)) {
+  } else if (grepl("gc_hplc_", file)) {
 
     gc_hplc_subcat[[file]] <- readxl::read_excel(file)
-  } else if (grepl("gcicp_", file)) {
+  } else if (grepl("gc_icp_", file)) {
  
     gc_icp_subcat[[file]] <- readxl::read_excel(file)
-  } else if (grepl("hplcicp_", file)) {
+  } else if (grepl("hplc_icp_", file)) {
 
     hplc_icp_subcat[[file]] <- readxl::read_excel(file)
-  } else if (grepl("hplc_", file)) {
+  } else if (grepl("hplc", file)) {
 
     hplc_subcat[[file]] <- readxl::read_excel(file)
-  } else if (grepl("gc_", file)) {
+  } else if (grepl("gc", file)) {
     gc_subcat[[file]] <- readxl::read_excel(file)
   }
 }
@@ -1499,32 +1499,6 @@ ggplot(data = top_metal_plot_df, aes(x = Category, y = Values, fill = Feature)) 
        fill = "Top trace metals") +
   theme_minimal(base_size = 20) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
-
-
-df <- data.frame(technique = rep(c("GC", "HPLC", "ICP", "GC + HPLC", "GC + ICP", "HPLC + ICP", "GC + HPLC + ICP"), 6),
-                 classifier = c(rep("RF", 7), rep("XGB", 7), rep("LGBM", 7), rep("GBM", 7), rep("SVC", 7), rep("MLR", 7)),
-                 accuracy = c(85.7, 100, 75, 83.3, 56.3, 100, 90, NA, 83.3, NA, 75, 50, 91.6, 90, 14.3, 91.6, 8.3, 71.4, 6.25, NA, 90, 71.4, 100, NA, 70, 56.3, 100, 83.3, 14.3, 75, NA, 63.3, 43.8, 75, 66.6, 42.9, 50, NA, 60, 62.5, 66.6, 80))
-                   # c(85.7, NA, 14.3, 71.4, 14.3, 42.9, 
-                   #            100, 83.3, 91.6, 100, 75, 50,
-                   #            75, NA, 8.3, NA, NA, NA,
-                   #            83.3, 75, 71.4, 70, 63.3, 60,
-                   #            56.3, 50, 6.25, 56.3, 43.8, 62.5,
-                   #            100, 91.6, NA, 100, 75, 66.6,
-                   #            90, 90, 90, 83.3, 66.6, 80))
-
-df$classifier <- factor(df$classifier, levels = c("MLR", "SVC", "LGBM", "XGB", "GBM", "RF"))
-
-ggplot(data = df) +
-  geom_bar(aes(x = classifier, y = accuracy, fill = technique), position = position_dodge(width = 0.9), stat = "identity") +
-  labs(title = "", x = "Machine Learning Classifiers", y = "Balanced Accuracy (%)",
-       fill = "Data combination") +
-  scale_fill_viridis_d() +
-  scale_x_discrete(labels = c("MLR", "SVC", "LGBM", "XGB", "GBM", "RF")) +
-  theme_classic(base_size = 30) +
-  theme(axis.text.x = element_text(angle = 90, color = "black", face = "bold"),
-        axis.ticks.length.x = unit(0, "cm")) +
-  scale_y_continuous(expand = c(0,0)) 
-
 ```
 
 #### For each plastic type, What are compounds that only appear in USSB and not USE?
@@ -1666,12 +1640,45 @@ writexl::write_xlsx(x=beyond_pmt, path = "Top10_HPLC_data_beyond_pmt_suspect Scr
 
 # Statistical fingerprinting
 
+## Plot Result from ML Classifiers with error bar of Standard deviation from 10 iterations
+```{r , echo=FALSE, warning = FALSE, message=FALSE}
+df <- readxl::read_xlsx(path = "ML classifier performance.xlsx") 
+
+df <- df %>%
+  pivot_longer(cols = 3:ncol(.), names_to = "rep", values_to = "BA") %>%
+  group_by(Technique, 
+           Classifier) %>%
+  summarise(BA_mean = mean(BA),
+            BA_sd = sd(BA))
+
+df$Classifier <- factor(df$Classifier, levels = c("SVC", "MLR", "LGBM", "XGB", "GBM", "RF"))
+
+ggplot(data = df, aes(x = Classifier, y = BA_mean, fill = Technique)) +
+  geom_bar(position = position_dodge(width = 0.9), stat = "identity") +
+  geom_errorbar(aes(ymin = BA_mean - BA_sd,
+                    ymax = BA_mean + BA_sd), position = 'dodge', linewidth = 0.15, alpha = 1, size = 1.5) +
+  labs(title = "", x = "Machine Learning Classifiers", y = "Balanced Accuracy (%)",
+       fill = "Data combination") +
+  scale_fill_manual(values = c("#a6cee3",
+                               "#1f78b4",
+                               "#b2df8a",
+                               "#33a02c", 
+                               "#fb9a99",
+                               "#e31a1c",
+                               "#fdbf6f")) +
+  theme_classic(base_size = 30) +
+  theme(axis.text.x = element_text(angle = 45, hjust =1.25, color = "black", face = "bold"),
+        axis.ticks.length.x = unit(0, "cm")) +
+  scale_y_continuous(expand = c(0,0))
+```
+
+
 ## PCA
 ```{r , echo=FALSE, warning = FALSE, message=FALSE}
 # clr_transformed_pca <- compositions::clr(test[, -1])
-data <- icp_subcat
+data <- readxl::read_excel(paste0(getwd(), "/MLdata_USEonly/icp.xlsx"))
 res.pca <- FactoMineR::PCA(
-  df_percentage,
+  data %>% select(-c("Subcategory")),
   # impute_list[[4]][[1]],
   # test2[, -1],
   # clr_transformed_pca,
@@ -1688,17 +1695,25 @@ factoextra::fviz_pca_biplot(res.pca,
                             invisible = "var", 
                             repel = TRUE,
                             labelsize = 10, 
-                            habillage = factor(df_pca$Subcategory),
-                            addEllipses = TRUE,
-                            ellipse.level=0.95,
-                            ggtheme = ggplot2::theme_minimal(base_size = 20),
-                            title = "Plastic Sample"
+                            habillage = factor(data$Subcategory),
+                            # addEllipses = TRUE,
+                            # ellipse.level=0.95,
+                            ggtheme = ggplot2::theme_minimal(base_size = 30),
+                            title = "",
+                            xlim = c(-0.5, 0.5),
+                            ylim = c(-0.25, 0.2)
                             ) + 
+  guides(fill=guide_legend(ncol=5)) +
   # if has error "Too few points to calculate an ellipse"
-  # ggforce::geom_mark_ellipse(aes(fill = Groups,
-  #                                color = Groups),
-  #                            label.buffer = unit(40, 'mm')) +
-  theme(legend.position = 'bottom') + coord_equal()
+  ggforce::geom_mark_ellipse(aes(fill = Groups,
+                                 color = Groups),
+                             label.buffer = unit(40, 'mm')) +
+  theme(legend.position = 'bottom',
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank()
+        )
+
+
 ```
 
 ### Barplot of Top 10 Variable contributions to first n dimensions
